[package]
name = "openos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openosguest"
path = "guest/main.rs"

[[bin]]
name = "opennetutil"
path = "src/net_util.rs"

[dependencies]
crosvm = { path = "./third_party/crosvm", features=["x", "gpu", "virgl_renderer"] }
net_util = { path = "./third_party/crosvm/net_util" }
sys_util = { path = "./third_party/crosvm/common/sys_util" }
gpu_display = { path = "./third_party/crosvm/gpu_display", features=["x"] }
arch = { path = "./third_party/crosvm/arch" }
devices = { path = "./third_party/crosvm/devices" }
serde = "1.0"
serde_yaml = "0.8"
clap = "2.34.0"
regex = "1"
tempfile = "3.2.0"
libc = "0.2.112"
bincode = "1.3.3"
xdotool = { git = "https://github.com/Treborium/rust-xdotool" }
tokio = { version = "0.2", features=["full"] }
x11-clipboard = "0.5.3"
tun-tap = "0.1.2"
rand = "0.8.4"

[features]
vmm_crosvm = []

# For CROSVM
[patch.crates-io]
assertions = { path = "./third_party/crosvm/common/assertions" }
audio_streams = { path = "./third_party/crosvm/common/audio_streams" }
base = { path = "./third_party/crosvm/common/base" }
cros_async =  { path = "./third_party/crosvm/common/cros_async" }
cros_fuzz = { path = "./third_party/crosvm/common/cros-fuzz" } # ignored by ebuild
data_model = { path = "./third_party/crosvm/common/data_model" }
libcras = { path = "./third_party/crosvm/libcras_stub" } # ignored by ebuild
p9 = { path = "./third_party/crosvm/common/p9" } # ignored by ebuild
sync = { path = "./third_party/crosvm/common/sync" }
sys_util = { path = "./third_party/crosvm/common/sys_util" }
system_api = { path = "./third_party/crosvm/system_api_stub" } # ignored by ebuild
wire_format_derive = { path = "./third_party/crosvm/common/p9/wire_format_derive" } # ignored by ebuild
minijail = { path = "./third_party/crosvm/third_party/minijail/rust/minijail" } # ignored by ebuild
vmm_vhost = { path = "./third_party/crosvm/third_party/vmm_vhost", features = ["vhost-user-master", "vhost-user-slave"] }